Styles/style.css
*{
    margin:0;
    padding: 0;
    box-sizing: border-box;
}



.inter-font{
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
 
}


header{
    /* background-image: url(../assets/hero-bg.png);
    background-position: bottom; */
    max-width: 1600px;
    margin: 0 auto;
}



.navbar{
color: #FFFFFF;
background-color: #1A0B2E;
display: flex;
justify-content: space-between;
align-items: center;
padding: 16px 200px;


}
.logo{
    width: 219 px;
    font-size: 1.5rem;
}
.text-color{
 background: linear-gradient(
  12deg,
  #F7E93F 0%,
  #FB09B4 51%,
  #9100F8 100%
);
  -webkit-background-clip: text;
  color: transparent;
}

.list ul{
    display: flex;
    gap:32px;
    font-size:1rem;
    font-weight: 500;
}
.hamburger-icon{
    display:none;
}
.btn{
    width: 135px;
}

.btn button{
    border: none;
    border-radius: 10000px;
    font-size: 1rem;
    font-weight: 500;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    padding: 12px 16px;
    color: #FFFFFF;
     background: linear-gradient(
  15deg,
  #F7E93F 0%,
  #FB09B4 51%,
  #9100F8 100%
);
}

.btn button:hover{
     background: linear-gradient(
  15deg,
  #ddcd20 0%,
  #e222a9 5%,
  #8624cc 60%)
}
/* ----------------------------- */

.banner{
      background-image: url(../assets/hero-bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 101px 525px;
} 



.cicle{
    height: 350px;
    width:350px;
   border: 1px solid red;
  position: relative;
   display: inline-block;
   margin-bottom: 40px;
}
.cicle img {
  
    display: block;
}
.mic{
  position: absolute;      
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 5;
     transition: transform 0.3s ease-in;
}

.mic:hover {
    transform: translate(-50%, -50%) scale(1.2) translateY(-5px);
}

.mic img {
     width: 100%;
    height: 100%;
    display: block;
}
.btn1 {
    position: absolute;        
    top: 20px;                
    left: 268px;              
    z-index: 10;              
    padding: 8px 16px ;
    
   
    background-color:rgba(0, 255, 136, 1);
    color: #1A0B2E;
    border: none;
    font-size: 1.13rem;
    font-weight: 600;
    border-radius: 5px;
    cursor: pointer;
    border: none;
    border-radius: 1000px;
    box-shadow: 0px 3px 27px 0px #00ff888e;
    transition: transform 0.3s ease, background-color 0.3s ease;
}

.btn1:hover {
    transform: scale(1.1);       
    background-color: #FF66C4;  
}


.banner-heading,.banner-content{
    color: #FFFFFF;
      
    width:550px;
    border: 1px solid #00FF88;
    margin: 0 auto;
}
.banner-content{


display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
text-align: center;
 
}

.banner-heading h2{
font-size: 3.75rem;
font-weight: 800;
margin-bottom: 8px;
}
.banner-heading p{
font-size: 1rem;
white-space: nowrap;
margin-bottom: 24px;
}

.btn2 button, .btn3 button{
   background: linear-gradient(
  15deg,
  #F7E93F 0%,
  #FB09B4 51%,
  #9100F8 100%
);
display: flex;
justify-content: center;
align-items: center;
gap:8px;
border: none;
border-radius: 10000px;
padding: 12px 20px;
color: #FFFFFF;
font-size: 1rem;
font-weight: 600;
 transition: transform 0.6s ease-in-out, background-color 0.3s ease;
}
.btn3 button{
   background: linear-gradient(
  15deg,
   #ffffff00 0%,
   #ffffff00 0%,
   #ffffff00 0%
);
color: #00FF88;
border: 1px solid #00FF88;

}

.btn2 button:hover, .btn3 button:hover{

 transform: scale(0.8);       
    
background-color:beige;
border: none;


}



.lower-btn{
display: flex;
gap: 8px;
border: 1px solid #00FF88;

}


.upper{
    
    border: 1 px solid red;
   background-color: rgba(26, 11, 46, 1);
    max-width: 1600px;
   margin:0 auto;
   padding: 50px 200px 120px 200px;
}

.section-heading{
    color:#FFFFFF;
    font-size: 3rem;
    font-weight: 700;
}

.upper p{
     font-size: 1rem;
     color: #FFFFFF;
    line-height: 1.5;

}
.last-p{
   margin-top: 16px;
   margin-bottom: 80px;

}

.bottom h1{

    color: #00FF88;
    font-size: 3rem;
}


.up-section{

display: flex;
flex-direction: column;
align-items: center;
gap: 16px;
text-align: center;


}
.bottom ul{
    border-top: 1px solid rgba(255, 255, 255, 0.103);
    padding-top:80px ;
    display: grid;
   grid-template-columns: repeat(4,1fr);
}
.bottom ul li{
  
    width: 240px;
    
    display: flex;
    flex-direction: column;
    align-items: center;
    gap:16px;
}


/* ------------------- */
.middle{
    max-width: 1600px;
    background-color: rgba(35, 14, 61, 1);
    margin: 0 auto;
}
.Heading h1{
  color: #FFFFFF;
  font-size: 3rem;
  font-weight: 700;
  padding: 120px 0 40px 0px;
  text-align: center;
 
}

.card-section {
padding: 120px 200px;


}
.card-section div{
border-radius: 40px;
background-color: rgba(53, 17, 101, 0.4);

}
.card-section h2{
color: #FFFFFF;
font-size: 1.5rem;

}
.card-section p{
color: rgba(255, 255, 255, 0.637);
font-size: 1 rem;

}
.card img{
    height: 60px;
    width:60px
}
.card{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap:16px;

   padding: 40px;
}


.card1{
    grid-area: c1;
   
   
    
}
.card2{
     grid-area: c2;
   

}
.card3{
    grid-area: c3;
    
}
.card4{
    grid-area: c4;
  
}
.card5{
    grid-area: c5;
  
}

.card-section {

display: grid;
gap:30px;
grid-template-areas:
 "c1 c2 c2 c2"
 "c1 c3 c3 c3"
 "c4 c4 c4 c5"

}


.last-section{
    background-color: rgba(26, 11, 46, 1);
    max-width: 1600px;
    margin: 0 auto;
}
.last-section h1{
    color: #FFFFFF;
    font-size: 3rem;
    font-weight: 700;
    text-align: center;
   padding-top: 120px;
   margin-bottom: 40px;
    
}
.last-section h3{
    color: #FFFFFF;
    font-size: 1.5rem;
    font-weight:700;
    
}
.last-section h2{
    color: #FFFFFF;
    font-size: 2rem;
      font-weight:700;
    
}
.last-section p{
    color: #ffffff9f;
    font-size: 1rem;


    
    
}
.last-section .duration{
    color: #00FF88;
    

    
    
}
.video-card-section{
    padding: 0 200px;
  
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap:30px;
}

.video-card{
    display: flex;
    flex-direction: column;
    gap: 12px;
    padding: 24px;
    background-color: rgba(37, 13, 68, 1);
  
  
}
.video-card iframe{
     width: 100%;
     height: auto;
     border-radius:24px 24px 0 0 ;
  
}

.duration{
display: flex;
justify-content: flex-start;
align-items: center;
gap:6px;

}

.container{
    background-color: rgba(53, 17, 101, 0.4);
    display: flex;
    gap:24px;
    padding: 40px;
    border-radius: 40px;
    margin: 0 200px;
    margin-bottom: 120px;
}
.container ul{
    display: flex;
    gap:8px;
    justify-content: flex-start;
    align-items: center;
}
.container ul li{
   height: 40px;
   width: 40px;
   border-radius: 50%;
   border: 1px solid rgba(83, 60, 114, 1);
   display: flex;
   justify-content: center;
   align-items: center;
}
.container ul img{
   height: 20px;
   width: 20px;
 
}

.speech{
  display: flex;
  flex-direction: column;
  gap: 16px;

}





























/* ____________RESPONSIVE DESIGN CODE______________ */

@media screen and (max-width:576px){
    .navbar{
        width: 100%;
        display:flex; 
        justify-content: space-between;
        align-items: center;
        gap: 24px;
        border: 1px solid red;
        padding: 16px;
    }
    .navbar .hamburger-icon{
      display: inline;
        
    }
    .navbar li,.btn button{
        display: none;
         
    }

.banner{
      width:100%;
    
     padding: 40px 20px;
     background-size:relative;
} 


.banner-heading p{
font-size: 1rem;
white-space: nowrap;

font-weight: 400;

margin: 0 auto;
text-align: center;
margin-bottom: 1px;


}
.banner-heading .par{
font-size: 1rem;
white-space: nowrap;
margin-bottom: 24px;
font-weight: 400;
}

/* ----------------------- */
.upper{
    width: 100%;
    padding: 40px 20px;
}

.up-section h2{
    font-size: 2rem;
     width: 400px;
}
.up-section p{
    font-size: 1rem;
    line-height: 20px;
    width: 450px;
    height: 120px;
    margin:0 auto;


     gap: 16px;
    
   
}
.up-section .par{
    
    font-size: 1rem;
    line-height: 20px;
    margin-bottom: 40px;
}

.bottom ul{
   grid-template-columns: repeat(2,1fr);
   gap: 40px;
}


.middle{
 width:100%;
    padding:40px 20px;
}


.Heading h1{
  color: #FFFFFF;
  font-size: 2rem;
  font-weight: 700;
  padding: 40px 0 40px 0px;
  text-align: center;
  
}

.card-section {

display: grid;
gap:16px;
grid-template-areas:
 "c1 c1 c1 c1"
 "c2 c2 c2 c2"
 "c3 c3 c3 c3"

 "c4 c4 c4 c4"
  "c5 c5 c5 c5";
  justify-items: center;
padding: 0px;
}


.card-section h2{
color: #FFFFFF;
font-size: 1.3rem;

}
.card-section p{
color: rgba(255, 255, 255, 0.637);
font-size: 1 rem;

}
.card img{
    height: 50px;
    width:50px
}

.card-section div {

width: 100%;

}
/* ------------ */

.container{
   width: 100%;
}

.video-card-section{
  
    grid-template-columns: repeat(1,1fr);
    gap:60px;
   padding:40px 20px 0px 20px;
}

.video-card{
  width: 100%;
  width: 400px;
  margin: 0 auto;
  
}
.video-card iframe{
  width: 100%;
 
  height: 200px;

  
}


.speech{
    width: 100%;
  padding: 24px;
}


.container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
    white-space: wrap;
    margin: 0 auto;
    gap:16px;
    width: 400px;
}
.container ul{
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
  
  
}





}

